// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/updates/generate generateBranchConfig() does not group single upgrade 1`] = `
Object {
  "branchName": "some-branch",
  "depName": "some-dep",
  "foo": 1,
  "prTitle": "some-prefix: some-title",
  "semanticCommits": true,
  "semanticPrefix": "some-prefix:",
  "upgrades": Array [
    Object {
      "branchName": "some-branch",
      "depName": "some-dep",
      "foo": 1,
      "prTitle": "some-prefix: some-title",
      "semanticCommits": true,
      "semanticPrefix": "some-prefix:",
    },
  ],
}
`;

exports[`workers/repository/updates/generate generateBranchConfig() groups multiple upgrades 1`] = `
Object {
  "branchName": "some-branch",
  "depName": "some-dep",
  "foo": 2,
  "groupName": "some-group",
  "prTitle": "some-title",
  "upgrades": Array [
    Object {
      "branchName": "some-branch",
      "depName": "some-dep",
      "foo": 2,
      "groupName": "some-group",
      "prTitle": "some-title",
    },
    Object {
      "branchName": "some-branch",
      "depName": "some-other-dep",
      "foo": 2,
      "groupName": "some-group",
      "prTitle": "some-title",
    },
  ],
}
`;

exports[`workers/repository/updates/generate generateBranchConfig() groups single upgrade if not lazyGrouping 1`] = `
Object {
  "branchName": "some-branch",
  "depName": "some-dep",
  "foo": 2,
  "groupName": "some-group",
  "prTitle": "some-title",
  "upgrades": Array [
    Object {
      "branchName": "some-branch",
      "depName": "some-dep",
      "foo": 2,
      "groupName": "some-group",
      "prTitle": "some-title",
    },
  ],
}
`;
